[package]
name = "jsonc-wasm"
version = "0.1.2"
edition = "2021"
description = "By using this package, you can acquire JSON strings that can be parsed from JSONC(JSON with comment)."
repository = "https://github.com/AkifumiSato/jsonc-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
anyhow = "1.0"
thiserror = "1.0"
